[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/arrow_empty.png" type="Texture" id=1]
[ext_resource path="res://Button.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 142, 256 )

[node name="Button" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -112, 0 )
shape = SubResource( 1 )
[connection signal="input_event" from="." to="." method="_on_Button_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
